spacing is corrected.

--- a/wp-content/themes/MacCenter/css/custom.css
+++ b/wp-content/themes/MacCenter/css/custom.css
@@ -387,7 +387,8 @@ overflow:hidden;
 }
 
 .single-product .clsContent .flex_column p {
-font-size: 12px
+font-size: 12px;
+padding:10px 10px 10px 0px
 }
 
 .single-product .flex_column.av_one_third.first img {
